--- a/Javascript/Class 17/index.html
+++ b/Javascript/Class 17/index.html
@@ -5,11 +5,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        *,
+        *::after,
+        *::before {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+        body {
+            background: rgb(2, 65, 146);
+            text-align: center;
+
+        }
+
+        .cross {
+            clip-path: polygon(0 0, 100% 0, 0 100%);
+            background: rgb(3, 79, 179);
+            width: 100%;
+            height: 100vh;
+        }
+
+        h2 {
+            color: white;
+            margin: 50px 0;
+            font-size: 40px;
+        }
+
+        h1 {
+            color: black;
+            background: crimson;
+            width: 50px;
+            display: inline-block;
+        }
+
+        button {
+            padding: 5px 20px;
+            border: none;
+            width: 100px;
+            color: black;
+            background: yellow;
+            font-size: 20px;
+            font-weight: bold;
+
+        }
+    </style>
 </head>
 
 <body>
-
-    <button onclick="timer()">Start</button>
+    <div class="cross">
+        <div>
+            <h2>Stop Watch</h2>
+        </div>
+        <div>
+            <h1 id="min">0</h1>
+            <h1 id="sec">0</h1>
+            <h1 id="mili">0</h1>
+        </div>
+        <div>
+            <button onclick="start()">Start</button>
+            <button onclick="stop()">Stop</button>
+            <button onclick="reset()">Reset</button>
+        </div>
+    </div>
     <script src="App.js" type="text/javascript"></script>
 </body>
 
