--- a/Beg Code/css/animated water text/index.html
+++ b/Beg Code/css/animated water text/index.html
@@ -7,13 +7,11 @@
     <title>Water Wave</title>
     <style>
         .water {
-
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
         }
-
         .water h1 {
             font-size: 10em;
             color: rgba(56, 56, 56, 0.2);
@@ -22,22 +20,21 @@
             -webkit-background-clip: text;
             background-size: cover;
             animation: animate 15s linear infinite;
-
+            transition:0.5s all ease-in-out;
         }
-
+        .water h1:hover {
+           opacity:0.5;
+        }
         @keyframes animate {
             0% {
                 background-position: left 0px top 80px;
             }
-
             40% {
                 background-position: left 800px top -80px;
             }
-
             80% {
                 background-position: left 1600px top -80px;
             }
-
             100% {
                 background-position: left 2400px top 80px;
             }
